# sensors

./: .gitignore  Makefile  README.md  dune-project  esy.json  sensors.opam  sensors.opam.locked
esy.lock/: index.json
server/lib/: time.re  time.rei
server/models/: api_key.re  api_key.rei  reading.re  reading.rei  sensor.re  sensor.rei  user.re  user.rei
